--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,23 @@
         .fab.fa-whatsapp {
             font-size: 2em;
         }
+        .founder-image {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            margin: 20px auto;
+        }
+        .founder-card {
+            text-align: center;
+        }
+        .card {
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
@@ -89,17 +106,45 @@
                     We bring proven success and the discipline of large-scale, complex projects from demanding sectors, including FinTech, Healthcare, Logistics, SocialMedia, and Hospitality.
                 </p>
                 <div class="stats">
-                    <div class="stat-item">
-                        <h3 class="stat-number">40+</h3>
-                        <p class="stat-label">Years of cumulative Experience</p>
+                    <!-- Removed stats for experience, projects, and clients -->
+                </div>
+            </div>
+            <div class="founders">
+                <h3>Our Founders</h3>
+                <div class="founders-grid">
+                    <div class="founder-card">
+                        <div class="card">
+                            <img src="../assets/rahul.png" alt="Rahul Tiwari" class="founder-image">
+                            <h4>Rahul Tiwari</h4>
+                            <p>Senior Developer and Tech Lead with over 15 years of experience
+                                specializing in designing, developing, and leading mobile
+                                application projects. Deep expertise in Android frameworks,
+                                architecture, and building high-impact apps for fintech, social
+                                media, healthcare, and consumer domains.</p>
+                        </div>
                     </div>
-                    <div class="stat-item">
-                        <h3 class="stat-number">100+</h3>
-                        <p class="stat-label">Projects Delivered</p>
+                    <div class="founder-card">
+                        <div class="card">
+                            <img src="../assets/surbhi.jpg" alt="Surbhi Tiwari"
+                                 class="founder-image">
+                            <h4>Surbhi Tiwari</h4>
+                            <p>With 12 years of IT experience as a Senior Strategist and hands-on QA
+                                Lead (API, Mobile, Web). As Co-founder/CEO, I use this depth, plus
+                                my Scrum Master and Google PM certifications, to mentor
+                                high-performing, collaborative teams, ensuring GTM efficiency,
+                                revenue growth, and superior customer success.</p>
+                        </div>
                     </div>
-                    <div class="stat-item">
-                        <h3 class="stat-number">50+</h3>
-                        <p class="stat-label">Happy Clients</p>
+                    <div class="founder-card">
+                        <div class="card">
+                            <img src="../assets/amar.jpg" alt="Amar Wagholikar"
+                                 class="founder-image">
+                            <h4>Amar Wagholikar</h4>
+                            <p>Senior Developer with 15 yrs experience leading the design &
+                                development of scalable, user-centric mobile apps across
+                                wide-ranging domains, including last-mile logistics, restaurant
+                                reservations and table management, e-commerce & more.</p>
+                        </div>
                     </div>
                 </div>
             </div>
