feat: Add initial structure for AnubiasTech website
Creates the primary `index.html` file, establishing the foundational structure and content for the company's single-page website.

- **HTML Structure:** Introduces a full-page layout with a navigation bar, hero, about, services, portfolio, contact, and footer sections.
- **Content:** Populates all sections with initial text, images, and project details for the company's portfolio.
- **Dependencies:** Links to `styles.css` for styling, `main.js` for interactivity, and imports Font Awesome for icons.
- **Metadata & SEO:** Sets the page title, includes responsive viewport settings, and adds a favicon.
- **Contact:** Implements "Get In Touch" section with mailto, telephone, and WhatsApp links.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="assets/icon.svg" type="image/svg+xml">
-    <style>
-        .contact-icon i {
-            font-size: 1.5em;
-        }
-        .fas.fa-phone-alt {
-            transform: scaleX(-1);
-        }
-        .fab.fa-whatsapp {
-            font-size: 2em;
-        }
-    </style>
 </head>
 <body>
 <!-- Navigation -->
@@ -89,17 +78,36 @@
                     We bring proven success and the discipline of large-scale, complex projects from demanding sectors, including FinTech, Healthcare, Logistics, SocialMedia, and Hospitality.
                 </p>
                 <div class="stats">
-                    <div class="stat-item">
-                        <h3 class="stat-number">40+</h3>
-                        <p class="stat-label">Years of cumulative Experience</p>
+                    <!-- Removed stats for experience, projects, and clients -->
+                </div>
+            </div>
+            <div class="founders">
+                <div class="founders-grid">
+                    <div class="founder-card">
+                        <img src="assets/rahul.png" alt="Rahul Tiwari">
+                        <h4>Rahul Tiwari</h4>
+                        <p>Senior Developer and Tech Lead with over 15 years of experience
+                            specializing in designing, developing, and leading mobile
+                            application projects. Deep expertise in Android frameworks,
+                            architecture, and building high-impact apps for fintech, social
+                            media, healthcare, and consumer domains.</p>
                     </div>
-                    <div class="stat-item">
-                        <h3 class="stat-number">100+</h3>
-                        <p class="stat-label">Projects Delivered</p>
+                    <div class="founder-card">
+                        <img src="assets/surbhi.jpg" alt="Surbhi Tiwari">
+                        <h4>Surbhi Tiwari</h4>
+                        <p>With 12 years of IT experience as a Senior Strategist and hands-on QA
+                            Lead (API, Mobile, Web). As Co-founder/CEO, I use this depth, plus
+                            my Scrum Master and Google PM certifications, to mentor
+                            high-performing, collaborative teams, ensuring GTM efficiency,
+                            revenue growth, and superior customer success.</p>
                     </div>
-                    <div class="stat-item">
-                        <h3 class="stat-number">50+</h3>
-                        <p class="stat-label">Happy Clients</p>
+                    <div class="founder-card">
+                        <img src="assets/amar.jpg" alt="Amar Wagholikar">
+                        <h4>Amar Wagholikar</h4>
+                        <p>Senior Developer with 15 yrs experience leading the design &
+                            development of scalable, user-centric mobile apps across
+                            wide-ranging domains, including last-mile logistics, restaurant
+                            reservations and table management, e-commerce & more.</p>
                     </div>
                 </div>
             </div>
