feat: Add initial structure for AnubiasTech website
Creates the primary `index.html` file, establishing the foundational structure and content for the company's single-page website.

- **HTML Structure:** Introduces a full-page layout with a navigation bar, hero, about, services, portfolio, contact, and footer sections.
- **Content:** Populates all sections with initial text, images, and project details for the company's portfolio.
- **Dependencies:** Links to `styles.css` for styling, `main.js` for interactivity, and imports Font Awesome for icons.
- **Metadata & SEO:** Sets the page title, includes responsive viewport settings, and adds a favicon.
- **Contact:** Implements "Get In Touch" section with mailto, telephone, and WhatsApp links.

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 <section id="portfolio" class="portfolio">
     <div class="container">
         <div class="section-header">
-            <h2 class="section-title">Our Portfolio</h2>
-            <p class="section-subtitle">Following are some projects on which our team members have worked on.</p>
+            <h2 class="section-title">Prior Work & Capabilities</h2>
+            <p class="section-subtitle">The projects that have defined our expertise and prepared us to deliver for your goals.</p>
         </div>
         <div class="portfolio-grid">
             <div class="portfolio-item">
