--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="contact-item">
+                <div class="contact-item" style="padding: 0 20px;">
                     <a href="https://wa.me/9405616775" class="contact-icon" title="WhatsApp">
                         <i class="fab fa-whatsapp"></i>
                     </a>
