Add few more projects to the portfolio section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,47 @@
                     </div>
                 </div>
             </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/dishcult-logo.png"
+                         alt="Dishcult">
+                    <div>
+                        <h3>Dishcult</h3>
+                        <p>Dish Cult helps users discover restaurants and make reservations online.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/resdiary-logo.webp"
+                         alt="ResDiary">
+                    <div>
+                        <h3>ResDiary</h3>
+                        <p>ResDiary is an online system for restaurant reservations and table management.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/honestbee-logo.png"
+                         alt="Honestbee">
+                    <div>
+                        <h3>Honestbee</h3>
+                        <p>Online platform offering grocery, food, laundry, and parcel delivery services in Asia.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/getmii-logo.png"
+                         alt="Getmii">
+                    <div>
+                        <h3>Getmii</h3>
+                        <p>Getmii is a mobile app for sharing needs and offers with people nearby.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
