--- a/index.html
+++ b/index.html
@@ -176,27 +176,6 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <div class="portfolio-content">
-                    <img class="project-icon" src="assets/markk.png" alt="Markk Project Icon">
-                    <div>
-                        <h3>Markk</h3>
-                        <p>Social platform for sharing and discovering local experiences and
-                            recommendations.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-content">
-                    <img class="project-icon" src="assets/Axio.webp"
-                         alt="Walnut Axio Project Icon">
-                    <div>
-                        <h3>Walnut (Axio)</h3>
-                        <p>SMS-based money management app for tracking expenses, budgeting, and bill
-                            reminders.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-content">
                     <img class="project-icon" src="assets/FedEx.webp" alt="FedEx Project Icon">
                     <div>
                         <h3>FedEx Mobile</h3>
@@ -211,58 +190,68 @@
                          alt="S-ICD Programmer Project Icon">
                     <div>
                         <h3>S-ICD Programmer</h3>
-                        <p>Medical device programming tool for Boston Scientific's S-ICD system.</p>
+                        <p>Medical device programming tool for Boston Scientific's S-ICD cardiac
+                            system.</p>
                     </div>
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-content">
-                    <img class="project-icon" src="assets/ninja_icon.webp"
-                         alt="Ninja Sales Pro Project Icon">
-                    <div>
-                        <h3>Ninja Sales Pro</h3>
-                        <p>Internal solution for sales team productivity and partner engagement.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-content">
-                    <img class="project-icon" src="assets/dishcult-logo.png"
-                         alt="Dishcult">
-                    <div>
-                        <h3>Dishcult</h3>
-                        <p>Dish Cult helps users discover restaurants and make reservations online.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-content">
-                    <img class="project-icon" src="assets/resdiary-logo.webp"
-                         alt="ResDiary">
-                    <div>
-                        <h3>ResDiary</h3>
-                        <p>ResDiary is an online system for restaurant reservations and table management.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-content">
-                    <img class="project-icon" src="assets/honestbee-logo.png"
-                         alt="Honestbee">
+                    <img class="project-icon" src="assets/honestbee-logo.png" alt="Honestbee">
                     <div>
                         <h3>Honestbee</h3>
-                        <p>Online platform offering grocery, food, laundry, and parcel delivery services in Asia.</p>
+                        <p>Online platform offering grocery, food, laundry, and parcel delivery
+                            services in Asia.</p>
                     </div>
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-content">
-                    <img class="project-icon" src="assets/getmii-logo.png"
-                         alt="Getmii">
+                    <img class="project-icon" src="assets/resdiary-logo.webp" alt="ResDiary">
+                    <div>
+                        <h3>ResDiary</h3>
+                        <p>ResDiary is an online system for restaurant reservations and table
+                            management.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/dishcult-logo.png" alt="Dishcult">
+                    <div>
+                        <h3>Dishcult</h3>
+                        <p>Dish Cult helps users discover restaurants and make reservations
+                            online.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/getmii-logo.png" alt="Getmii">
                     <div>
                         <h3>Getmii</h3>
-                        <p>Getmii is a mobile app for sharing needs and offers with people nearby.
-                        </p>
+                        <p>Getmii is a mobile app for sharing needs and offers with people
+                            nearby.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/Axio.webp" alt="Walnut Axio Project Icon">
+                    <div>
+                        <h3>Axio</h3>
+                        <p>SMS-based money management app for tracking expenses, budgeting, and bill
+                            reminders.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/markk.png" alt="Markk Project Icon">
+                    <div>
+                        <h3>Markk</h3>
+                        <p>Social platform for sharing and discovering local experiences and
+                            recommendations.</p>
                     </div>
                 </div>
             </div>
