added more projects

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div>
                         <h3>FedEx Mobile</h3>
                         <p>FedEx app for tracking shipments, managing deliveries, and accessing
-                            services on mobile.</p>
+                            services.</p>
                     </div>
                 </div>
             </div>
@@ -190,8 +190,7 @@
                          alt="S-ICD Programmer Project Icon">
                     <div>
                         <h3>S-ICD Programmer</h3>
-                        <p>Medical device programming tool for Boston Scientific's S-ICD cardiac
-                            system.</p>
+                        <p>Mobile tool for programming Boston Scientific's cardiac devices.</p>
                     </div>
                 </div>
             </div>
@@ -200,8 +199,7 @@
                     <img class="project-icon" src="assets/honestbee-logo.png" alt="Honestbee">
                     <div>
                         <h3>Honestbee</h3>
-                        <p>Online platform offering grocery, food, laundry, and parcel delivery
-                            services in Asia.</p>
+                        <p>Online platform for grocery, laundry, and parcel delivery.</p>
                     </div>
                 </div>
             </div>
@@ -210,8 +208,7 @@
                     <img class="project-icon" src="assets/resdiary-logo.webp" alt="ResDiary">
                     <div>
                         <h3>ResDiary</h3>
-                        <p>ResDiary is an online system for restaurant reservations and table
-                            management.</p>
+                        <p>Online restaurant reservations and table management.</p>
                     </div>
                 </div>
             </div>
@@ -220,8 +217,28 @@
                     <img class="project-icon" src="assets/dishcult-logo.png" alt="Dishcult">
                     <div>
                         <h3>Dishcult</h3>
-                        <p>Dish Cult helps users discover restaurants and make reservations
-                            online.</p>
+                        <p>App for discovering restaurants and making reservations online.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/espn.webp"
+                         alt="ESPN Cricinfo Project Icon">
+                    <div>
+                        <h3>ESPN Cricinfo Mobile Site</h3>
+                        <p>Mobile cricket platform optimized for fast access, coverage, and user
+                            engagement</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item navteq-portfolio">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/navteq.jpeg"
+                         alt="Navteq Maps SDK Project Icon">
+                    <div>
+                        <h3>Navteq Maps Ad SDK</h3>
+                        <p>Location-based advertising SDK for Android/iOS.</p>
                     </div>
                 </div>
             </div>
@@ -230,8 +247,7 @@
                     <img class="project-icon" src="assets/getmii-logo.png" alt="Getmii">
                     <div>
                         <h3>Getmii</h3>
-                        <p>Getmii is a mobile app for sharing needs and offers with people
-                            nearby.</p>
+                        <p>Connect, share, and discover needs and offers nearby.</p>
                     </div>
                 </div>
             </div>
@@ -240,8 +256,7 @@
                     <img class="project-icon" src="assets/Axio.webp" alt="Walnut Axio Project Icon">
                     <div>
                         <h3>Axio</h3>
-                        <p>SMS-based money management app for tracking expenses, budgeting, and bill
-                            reminders.</p>
+                        <p>SMS-based money management and bill reminders.</p>
                     </div>
                 </div>
             </div>
@@ -250,8 +265,27 @@
                     <img class="project-icon" src="assets/markk.png" alt="Markk Project Icon">
                     <div>
                         <h3>Markk</h3>
-                        <p>Social platform for sharing and discovering local experiences and
-                            recommendations.</p>
+                        <p>Social platform for sharing and discovering local experiences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/wwd_square.webp" alt="WWD Project Icon">
+                    <div>
+                        <h3>WWD Mobile Site</h3>
+                        <p>Optimized performance and usability for WWD mobile web across
+                            devices.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-content">
+                    <img class="project-icon" src="assets/appian.webp"
+                         alt="Appian BPM Project Icon">
+                    <div>
+                        <h3>Appian BPM Mobile App</h3>
+                        <p>Enterprise business process app for Android & Blackberry.</p>
                     </div>
                 </div>
             </div>
