--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="portfolio-item navteq-portfolio">
                 <div class="portfolio-content">
-                    <img class="project-icon" src="assets/navteq.jpeg"
+                    <img class="project-icon" src="assets/navteq.png"
                          alt="Navteq Maps SDK Project Icon">
                     <div>
                         <h3>Navteq Maps Ad SDK</h3>
