--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="assets/icon.svg" alt="AnubiasTech Logo" class="footer-icon">
-                <span class="footer-text">AnubiasTech</span>
+                <span class="footer-text">Anubias Technologies</span>
             </div>
             <div class="footer-links">
                 <a href="#home">Home</a>
@@ -359,10 +359,14 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 AnubiasTech. All rights reserved.</p>
+            <p>&copy; 2025 Anubias Technologies. All rights reserved.</p>
         </div>
     </div>
 </footer>
+
+<button class="fab-theme-toggle" id="themeToggleButton" aria-label="Toggle dark mode/light mode">
+    <i class="fas fa-moon" id="themeIcon"></i>
+</button>
 
 <script src="js/main.js"></script>
 </body>
